# LexMPM

./: .gitignore  README.md
py-api/: main.py  manage.py  pyproject.toml
py-api/APIModels/: Token.py  User.py
py-api/configuration/: Configuration.py  Security.py
py-api/model/: Base.py  Project.py  ProjectTasks.py  Roles.py  SATypes.py  Schemas.py  Task.py  UserRoles.py  Users.py  database.py
